--- a/Varian.RomanNumerals.Tests/Varian.RomanNumerals.Tests.csproj
+++ b/Varian.RomanNumerals.Tests/Varian.RomanNumerals.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RomanNumeralConverterComplexTests.cs" />
     <Compile Include="RomanNumeralConverterBasicTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
