--- a/Varian.Common.Tests/Varian.Common.Tests.csproj
+++ b/Varian.Common.Tests/Varian.Common.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4102F7D-B3C8-4410-9879-9C4E4DD52E00}</ProjectGuid>
+    <ProjectGuid>{115CA533-2A3C-4B9C-A4D6-F96C5DC7E691}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Varian.RomanNumerals</RootNamespace>
-    <AssemblyName>Varian.RomanNumerals</AssemblyName>
+    <RootNamespace>Varian.Common.Tests</RootNamespace>
+    <AssemblyName>Varian.Common.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
+    <Reference Include="nunit.framework, Version=3.9.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,13 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DI\RomanNumeralModule.cs" />
-    <Compile Include="Model\INumeral.cs" />
-    <Compile Include="Model\RomanMarker.cs" />
-    <Compile Include="Model\RomanNumeral.cs" />
+    <Compile Include="ExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Interfaces\IRomanNumeralConverter.cs" />
-    <Compile Include="Services\RomanNumeralConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -59,6 +54,9 @@
       <Project>{6e5708d1-1797-4d95-afad-a65b6567c41e}</Project>
       <Name>Varian.Common</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
