--- a/Varian.Common/Varian.Common.csproj
+++ b/Varian.Common/Varian.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4102F7D-B3C8-4410-9879-9C4E4DD52E00}</ProjectGuid>
+    <ProjectGuid>{6E5708D1-1797-4D95-AFAD-A65B6567C41E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Varian.RomanNumerals</RootNamespace>
-    <AssemblyName>Varian.RomanNumerals</AssemblyName>
+    <RootNamespace>Varian.Common</RootNamespace>
+    <AssemblyName>Varian.Common</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
-      <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,22 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DI\RomanNumeralModule.cs" />
-    <Compile Include="Model\INumeral.cs" />
-    <Compile Include="Model\RomanMarker.cs" />
-    <Compile Include="Model\RomanNumeral.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Interfaces\IRomanNumeralConverter.cs" />
-    <Compile Include="Services\RomanNumeralConverter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Varian.Common\Varian.Common.csproj">
-      <Project>{6e5708d1-1797-4d95-afad-a65b6567c41e}</Project>
-      <Name>Varian.Common</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
