some more basic scafolding

--- a/Varian.StringParser.Tests/Varian.StringParser.Tests.csproj
+++ b/Varian.StringParser.Tests/Varian.StringParser.Tests.csproj
@@ -49,11 +49,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="StringParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Varian.StringParser\Varian.StringParser.csproj">
+      <Project>{68398c01-f990-41b3-b8fc-f8deeaf1c9ba}</Project>
+      <Name>Varian.StringParser</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
