--- a/Varian.RomanNumerals/packages.config
+++ b/Varian.RomanNumerals/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
   <package id="Ninject" version="3.3.4" targetFramework="net462" />
 </packages>
