--- a/Varian.StringParser.Tests/Varian.StringTransform.Tests.csproj
+++ b/Varian.StringParser.Tests/Varian.StringTransform.Tests.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{1DB40F0B-E08B-4CD8-9A7A-E1CB01660F24}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Varian.StringParser.Tests</RootNamespace>
-    <AssemblyName>Varian.StringParser.Tests</AssemblyName>
+    <RootNamespace>Varian.StringTransform.Tests</RootNamespace>
+    <AssemblyName>Varian.StringTransform.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core, Version=4.0.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
+      <HintPath>..\packages\Castle.Core.4.2.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Moq, Version=4.7.145.0, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.7.145\lib\net45\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
     </Reference>
@@ -40,6 +46,7 @@
       <HintPath>..\packages\NUnit.3.9.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,16 +56,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StringParserTests.cs" />
+    <Compile Include="StringTransformTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Varian.StringParser\Varian.StringParser.csproj">
+    <ProjectReference Include="..\Varian.RomanNumerals\Varian.RomanNumerals.csproj">
+      <Project>{d4102f7d-b3c8-4410-9879-9c4e4dd52e00}</Project>
+      <Name>Varian.RomanNumerals</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Varian.StringParser\Varian.StringTransform.csproj">
       <Project>{68398c01-f990-41b3-b8fc-f8deeaf1c9ba}</Project>
-      <Name>Varian.StringParser</Name>
+      <Name>Varian.StringTransform</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
