--- a/Varian.StringParser.Tests/packages.config
+++ b/Varian.StringParser.Tests/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net462" />
+  <package id="Moq" version="4.7.145" targetFramework="net462" />
   <package id="Ninject" version="3.3.4" targetFramework="net462" />
   <package id="NUnit" version="3.9.0" targetFramework="net462" />
   <package id="NUnit3TestAdapter" version="3.9.0" targetFramework="net462" />
